# OpenNews

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  tox.ini
examples/discord/: bot.py
examples/sanic/: app.py
opennews/: __init__.py  fetch.py  getnews.py  models.py  parse.py  rss.py  utils.py
