[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Zeb Taylor <zceboys@gmail.com>"]
description = "An open source scraper to get current news."
homepage = "https://github.com/foxnerdsaysmoo/opennews"
license = "LGPL-3.0"
name = "opennews"
readme = "README.md"
repository = "https://github.com/foxnerdsaysmoo/opennews"
version = "0.1.1"
[tool.poetry.dependencies]
aiohttp = "^3.8.1"
feedparser = "^6.0.8"
grequests = "^0.6.0"
pydantic = "^1.9.0"
python = "^3.8"
urllib3 = "^1.26.8"
[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
pre-commit = "^2.17.0"
pylint = "^2.12.2"
